[package]
name = "bitwheel"
version = "0.1.1"
edition = "2024"
description = "High-performance fixed capacity timer wheel"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Abso1ut3Zer0/bitwheel"
rust-version = "1.91.0"
readme = "README"
keywords = ["timer", "wheel", "async", "scheduling", "low-latency"]
categories = [
    "data-structures",
    "algorithms",
]
exclude = [
    ".github/",
    ".idea/",
    ".editorconfig",
    ".gitignore",
    "CONTRIBUTING.md",
]

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.8.1"
hdrhistogram = "7.5.4"


[[bench]]
name = "bitwheel"
harness = false
